--- a/app/views/movies.erb
+++ b/app/views/movies.erb
@@ -1,4 +1,13 @@
 <h1 class="bg1">All Movies</h1>
+<div id="navcontainer">
+  <ul>
+      <li><a href="/login">Log in</a></li>
+      <li><a href="/signup">Sign up</a></li>
+      <li><a href="/movies">All movies</a></li>
+      <li><a href="/profile">My profile</a></li>
+      <li><a href="/movies/new">Insert a new movie into Database</a></li>
+  </ul>
+</div>
 <% @movies.each do |movie| %>
  <ul>
    <li>
