--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,11 +1,10 @@
 <h1 class="bg1">Home Page</h1>
-
-<h4>Navigation Menu</h4>
-<ul>
-  <li><a href="/login">Log in</a></li>
-  <li><a href="/signup">Sign up</a></li>
-  <li><a href="/movies">All movies</a></li>
-  <li><a href="/profile">My profile</a></li>
-  <li><a href="/movies">All movies</a></li>
-  <li><a href="/movies/new">Insert a new movie into Database</a></li>
-</ul>
+<div id="navcontainer">
+  <ul>
+      <li><a href="/login">Log in</a></li>
+      <li><a href="/signup">Sign up</a></li>
+      <li><a href="/movies">All movies</a></li>
+      <li><a href="/profile">My profile</a></li>
+      <li><a href="/movies/new">Insert a new movie into Database</a></li>
+  </ul>
+</div>
