--- a/app/views/movie.erb
+++ b/app/views/movie.erb
@@ -1,4 +1,18 @@
-<h1 class="bg1"> Movie Name: <%= @movie.title %></h1>
-<table class="table table-striped">
-  ...
-</table>
+<h1 class="bg1"> Movie Name: <%= @movie.title %> </h1>
+<div id="navcontainer">
+  <ul>
+      <li><a href="/login">Log in</a></li>
+      <li><a href="/signup">Sign up</a></li>
+      <li><a href="/movies">All movies</a></li>
+      <li><a href="/profile">My profile</a></li>
+      <li><a href="/movies/new">Insert a new movie into Database</a></li>
+  </ul>
+</div>
+<ul>
+  <li> <strong> Name: </strong> <%= @movie.title %> </li>
+  <li> <strong> Genre: </strong> <%= @movie.genre %> </li>
+  <li> <strong> Duration: </strong> <%= @movie.duration %> minutes</li>
+  <li> <strong> Director: </strong> <%= @movie.director %> </li>
+</ul>
+<p><a href="/movies/new"> <button type="submit" class="btn btn-primary">Insert a new movie in the database</button></a></p>
+<p><a href="/movies"> <button type="submit" class="btn btn-secondary">View all movies</button></a></p>
